--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "bitsharesjs",
-    "version": "1.8.3",
+    "version": "1.8.0",
     "description": "Pure JavaScript Bitshares library for node.js and browsers.",
     "browser": {
         "ws": false,
@@ -10,7 +10,7 @@
         "test": "cross-env BABEL_ENV=test mocha --compilers js:babel-register --recursive",
         "test:chain": "cross-env BABEL_ENV=test mocha --compilers js:babel-register ./test/chain --recursive --watch",
         "test:trxbuilder": "cross-env BABEL_ENV=test mocha --compilers js:babel-register ./test/chain/TransactionBuilder.js --watch",
-        "test:ecc": "cross-env BABEL_ENV=test mocha --compilers js:babel-register ./test/ecc --recursive --watch",
+        "test:ecc": "cross-env BABEL_ENV=test mocha --compilers js:babel-register ./test/ecc --recursive",
         "test:serializer": "cross-env BABEL_ENV=test mocha --compilers js:babel-register ./test/serializer --recursive",
         "test:watch": "npm test -- --watch",
         "clean": "rimraf dist build es",
@@ -52,7 +52,7 @@
     "jsnext:main": "./es/index.js",
     "dependencies": {
         "bigi": "1.4.2",
-        "bitsharesjs-ws": "1.5.4",
+        "bitsharesjs-ws": "git+https://github.com/District1/bitsharesjs-ws.git",
         "bs58": "4.0.1",
         "bytebuffer": "5.0.1",
         "create-hash": "1.2.0",
